--- a/WebApp/style.css
+++ b/WebApp/style.css
@@ -9,7 +9,7 @@
   display: grid;
   grid-gap: 1.5em;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-rows: minmax(100px,auto);
+  grid-auto-rows: minmax(50px,auto);
   align-items: stretch;
   justify-content: stretch;
 }
@@ -23,18 +23,16 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-  /*grid-column-gap: 0.3em;*/
   grid-gap: 1em;
 }
 
 .sidebar{
   grid-area: sidebar ;
   grid-column: 2/4;
-  grid-row: 2/9;
-  background-color: #45ada8;
+  grid-row: 2/18;
 
   display: grid;
-  grid-auto-rows: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr;
 
   grid-gap: 1em;
@@ -44,7 +42,7 @@
   padding: 1.5em;
   grid-area: content;
   grid-column: 4/12;
-  grid-row: 2/9;
+  grid-row: 2/18;
   background-color: #45ada8;
 
   display: grid;
@@ -56,7 +54,7 @@
 .footer{
   grid-area: footer ;
   grid-column: 2/12;
-  grid-row: 9/10;
+  grid-row: 18/20;
   background-color: #45ada8;
 }
 
