--- a/WebApp/sidebar.css
+++ b/WebApp/sidebar.css
@@ -1,10 +1,15 @@
 .sidebar div{
   background-color: #45ada8;
   border-radius: 1.3em;
+  text-align: center;
+  display: inline-block;
+  font-size: 30px;
+  padding: 20px;
 }
 
 .sidebar div:hover{
   background-color: #43a7a2;
+
 }
 
 .function1{
